* file.c (FSTATFS): check availability of struct statfs and   struct statvfs in addition to fstatfs(2) and fstatvfs(2).   This fixes error in Solaris. [Bug #9788] [ruby-dev:48145]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@45768 b2dd03c8-39d4-4d8f-98ff-823fe69b080e